# cryptocol

./: .gitignore  .rustc_info.json  BreakingChanges.md  COPYING  Cargo.toml  README.md  git.txt  github.pub  ource code neater, fixed some documentation of the module random, and moved all information of breaking changes in README.md to BreakingChanges.md.qq
examples/: BigUInt_examples.rs  Hash_examples.rs  Performance_Test_BigUInt.rs  SmallUInt_examples.rs  Unions_examples.rs  biguint_examples.rs  des_examples.rs  hash_app.rs  hash_examples.rs  main.rs  md4_app.rs  md5_app.rs  mod.rs  performance_test_biguint.rs  random_examples.rs  sha1_app.rs  sha2_256_app.rs  sha2_512_224_app.rs  sha2_512_app.rs  small_uint_examples.rs  unions_examples.rs
src/: lib.rs  main.rs
src/cryptocol/: big_uint.rs  mod.rs  primitive.rs
src/hash/: Keccak.rs  md4.rs  md5.rs  mod.rs  sha1.rs  sha2_256.rs  sha2_512.rs  sha2_512_t.rs
src/number/: Numeric.rs  Uint.rs  big_number.rs  big_uint.rs  big_uint_for_big_endian.rs  big_unsigned_int.rs  common.rs  float.rs  huge_number.rs  int.rs  int_union.rs  int_unions.rs  long_union.rs  longer_union.rs  macros_for_integer_unions.rs  macros_for_types.rs  macros_number.rs  mod.rs  number_errors.rs  numeric.rs  primitive.rs  real.rs  share.rs  shared_arrays.rs  shared_values.rs  short_union.rs  sint.rs  size_union.rs  small_int_unions.rs  small_sint.rs  small_uint.rs  trait_impl_for_big_uint.rs  trait_impl_for_small_int_unions.rs  trait_impl_small_uint.rs  trait_small_uint_for_integer_unions_impl.rs  trait_small_uint_for_small_int_unions_impl.rs  trait_small_uint_for_unsigned_impl.rs  trait_small_uint_impl.rs  traits_for_big_uint_for_big_endian_impl.rs  traits_for_big_uint_impl.rs  (+2 more)
src/number/documentation/: big_uint_arithmetic.rs  big_uint_other_calculation.rs  big_uint_other_operation.rs  mod.rs
src/random/: any_number.rs  any_number_engine_c_generic.rs  mod.rs  random.rs  trait_impl_for_AnyNumber.rs  trait_impl_for_MD4.rs  trait_impl_for_MD5.rs  trait_impl_for_SHA1.rs  trait_impl_for_SHA2_256.rs  trait_impl_for_SHA2_512.rs  trait_impl_for_any_number.rs  trait_impl_for_md4.rs  trait_impl_for_md5.rs  trait_impl_for_sha1.rs  trait_impl_for_sha2_256.rs  trait_impl_for_sha2_512.rs  trait_prng.rs  trait_random_engine.rs
src/symmetric/: des.rs  mod.rs
src/tests/: BigUInt_test.rs  SmallUInt_test.rs  UInt_test.rs  Unions_test.rs  mod.rs
