[package]
authors = ["PARK Youngho"]
categories = ["algorithms", "cryptography", "mathematics"]
description = "A cryptographic library that includes big number arithmatic operation, hash algorithms, symmetric-key cryptographic encryption/decryption algorithms, asymmetric-key (public-key) cryptographic encryption/decryption algorithms, pseudo random number generators, etc."
edition = "2021"
keywords = ["number", "hash", "sha2", "sha512", "random"]
#keywords = ["number", "hash", "encryption", "random", "cryptography"]
license = "MIT OR Apache-2.0"
name = "cryptocol"
readme = "README.md"
version = "0.7.2"
repository = "https://github.com/piaoyh/cryptocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = false

[dependencies]
#rand = { version = "0.8", features = ["getrandom"] }
#rand_chacha = "0.3.1"
#rand_distr = "0.4.3"
#rand_pcg = "0.3.1"
#rand_seeder = "0.2.3"
