[package]
authors = ["PARK Youngho"]
categories = ["algorithms", "cryptography", "mathematics"]
description = "A cryptographic library that includes big number arithmatic operation, hash algorithms, symmetric-key cryptographic encryption/decryption algorithms, asymmetric-key (public-key) cryptographic encryption/decryption algorithms, pseudo random number generators, etc. Hash algorithms includes MD4, MD5, SHA224, SHA256, SHA384, SHA512, SHA3, etc. Symmetric key encryption algorithms include DES, AES, etc. Public key encryption algrorithms include RSA, ECC, etc."
edition = "2021"
keywords = ["number", "hash", "sha2", "sha512", "random"]
#keywords = ["number", "hash", "encryption", "random", "cryptography"]
license = "MIT OR Apache-2.0"
name = "cryptocol"
readme = "README.md"
version = "0.8.0"
repository = "https://github.com/piaoyh/cryptocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = false

[dependencies]

